--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,16 @@ body {
   background: white;
   margin: 30px 0;
 }
+
+.embed {
+  width: 100%;
+  aspect-ratio: 1 /1;
+}
+
+.card-header.grid {
+  grid-gap: 0;
+}
+
 .card-body {
   padding: 30px;
 }
@@ -200,7 +210,7 @@ footer a {
 }
 
 .image-responsive {
-  max-width: 100%;
+  width: 100%;
 }
 
 .text-center {
@@ -231,5 +241,13 @@ footer a {
 
   section {
     padding: 30px;
+  }
+
+  .card-header img {
+    display: none;
+  }
+
+  .embed {
+    aspect-ratio: 16 / 9;
   }
 }
