--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,10 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
 }
 
+.gallery {
+  padding-top: 30px;
+}
+
 .card {
   background: white;
   margin: 30px 0;
